Puntos ruta relativa

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edición digital: Fray Andrés de San Miguel</title>
-    <link rel="icon" type="image/png" href="/assets/images/favicon.png">
+    <link rel="icon" type="image/png" href="../assets/images/favicon.png">
     <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/variables.css">
-    <link rel="stylesheet" href="/assets/css/fontawesome.min.css">
-    <link rel="stylesheet" href="/assets/css/all.min.css">
+    <link rel="stylesheet" href="../assets/css/variables.css">
+    <link rel="stylesheet" href="../assets/css/fontawesome.min.css">
+    <link rel="stylesheet" href="../assets/css/all.min.css">
 </head>
 <body>
     <!--MENU-->
@@ -18,10 +18,10 @@
 
     <div id="mySidebar" class="sidebar">
         <!-- Contenido del menú -->
-        <a href="/index.html">Inicio</a>
-        <a href="/proyecto/">Sobre el proyecto</a>
-        <a href="/edicion">Edición</a>
-        <a href="/estudio">Estudio</a>
+        <a href="../index.html">Inicio</a>
+        <a href="../proyecto/">Sobre el proyecto</a>
+        <a href="../edicion">Edición</a>
+        <a href="../estudio">Estudio</a>
         <div class="cita">
             <p>Mamani Fuentes, Francisco (2024). Edición digital de la sección de carpintería del manuscrito de Fray Andrés de San Miguel, siglo XVII.</p>
         </div>
@@ -36,7 +36,7 @@
                     <h2>Edición digital</h2>
                     <h1>La carpintería en Fray Andrés de San Miguel</h1>
                 </div>
-                <div><a class="boton" href="/edicion">Accede a la edición</a></div>
+                <div><a class="boton" href="../edicion">Accede a la edición</a></div>
             </div>
             <div id="creditos">
                 <p>Bajo la dirección de <a class="enlace" href="http://fmamanif.com/" target="_blank">Francisco Mamamani Fuentes</a></p> 
@@ -49,6 +49,6 @@
     </div>  
 </div>
 
-<script src="/assets/js/script.js"></script>
+<script src="../assets/js/script.js"></script>
 </body>
 </html>
