--- a/edicion/index.html
+++ b/edicion/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Edición digital</title>
-    <link rel="icon" type="image/png" href="/assets/images/favicon.png">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/variables.css">
-    <link rel="stylesheet" href="/assets/css/fontawesome.min.css">
-    <link rel="stylesheet" href="/assets/css/all.min.css">
-    <link rel="stylesheet" href="/assets/css/tei.css">
+    <link rel="icon" type="image/png" href="../assets/images/favicon.png">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/variables.css">
+    <link rel="stylesheet" href="../assets/css/fontawesome.min.css">
+    <link rel="stylesheet" href="../assets/css/all.min.css">
+    <link rel="stylesheet" href="../assets/css/tei.css">
 </head>
 <body>
     <!--MENU-->
@@ -19,10 +19,10 @@
 
     <div id="mySidebar" class="sidebar">
         <!-- Contenido del menú -->
-        <a href="/">Inicio</a>
-        <a href="/proyecto">Sobre el proyecto</a>
-        <a href="/edicion">Edición</a>
-        <a href="/estudio">Estudio</a>
+        <a href="../">Inicio</a>
+        <a href="../proyecto">Sobre el proyecto</a>
+        <a href="../edicion">Edición</a>
+        <a href="../estudio">Estudio</a>
         <div class="cita">
             <p>Mamani Fuentes, Francisco (2024). Edición digital de la sección de carpintería del manuscrito de Fray Andrés de San Miguel, siglo XVII.</p>
         </div>
@@ -41,7 +41,7 @@
         <div class="row">
             <div class="col-3">
                 <div id="imagenContainer" class="imagen-fixed">
-                    <img src="/assets/images/facsimil/fac01.jpg" alt="Descripción de la imagen" id="miImagen" />
+                    <img src="../assets/images/facsimil/fac01.jpg" alt="Descripción de la imagen" id="miImagen" />
                 </div>
                 <div id="modalImagen" class="imagen-modal" style="display: none;">
                     <div class="modal-content-wrapper"> <!-- Contenedor agregado para centrado -->
@@ -62,16 +62,16 @@
             </div>
             <div class="col-3">
                 <a href="tu_enlace_aquí" class="logo-enlace">
-                    <img src="/assets/images/tei.png" alt="Logo TEI">
+                    <img src="../assets/images/tei.png" alt="Logo TEI">
                 </a>
             </div>
         </div>
     </div>
 
-    <script src="/assets/js/script.js"></script>
+    <script src="../assets/js/script.js"></script>
 
     <!-- CETEIcean -->
-    <script src="/assets/js/CETEI.js"></script>
+    <script src="../assets/js/CETEI.js"></script>
 
     <script>
         let c = new CETEI();
