division de las imagenes facsimiles

--- a/edicion/index.html
+++ b/edicion/index.html
@@ -41,8 +41,8 @@
         <div class="row">
             <div class="col-3">
                 <div id="imagenContainer" class="imagen-fixed">
-                    <img src="../assets/images/facsimil/fac01.jpg" alt="Descripción de la imagen" id="miImagen" />
-                </div>
+                    <img src="../assets/images/facsimil/72r.jpg" alt="Descripción de la imagen" id="miImagen" />
+                </div> <!-- HAY QUE PROBAR A RECUPERAR LA IMAGEN DESDE EL TEI DICIENDO QUE LO INSERTE EN ESTE CONTAINER -->
                 <div id="modalImagen" class="imagen-modal" style="display: none;">
                     <div class="modal-content-wrapper"> <!-- Contenedor agregado para centrado -->
                         <span class="cerrar-imagen">&times;</span>
