--- a/estudio/index.html
+++ b/estudio/index.html
@@ -20,7 +20,7 @@
         <!-- Contenido del menú -->
         <a href="../">Inicio</a>
         <a href="../proyecto">Sobre el proyecto</a>
-        <a href="../edicion.html">Edición</a>
+        <a href="../edicion">Edición</a>
         <a href="../estudio">Estudio</a>
         <div class="cita">
             <p>Mamani Fuentes, Francisco (2024). Edición digital de la sección de carpintería del manuscrito de Fray Andrés de San Miguel, siglo XVII.</p>
