--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <div id="mySidebar" class="sidebar">
         <!-- Contenido del menú -->
-        <a href="../index.html">Inicio</a>
-        <a href="../proyecto/">Sobre el proyecto</a>
+        <a href="../">Inicio</a>
+        <a href="../proyecto">Sobre el proyecto</a>
         <a href="../edicion">Edición</a>
         <a href="../estudio">Estudio</a>
         <div class="cita">
