--- a/edicion/index.html
+++ b/edicion/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edición digital</title>
+    <title>Inicio: edición digital</title>
     <link rel="icon" type="image/png" href="../assets/images/favicon.png">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/variables.css">
     <link rel="stylesheet" href="../assets/css/fontawesome.min.css">
     <link rel="stylesheet" href="../assets/css/all.min.css">
-    <link rel="stylesheet" href="../assets/css/tei.css">
 </head>
 <body>
     <!--MENU-->
@@ -29,74 +28,220 @@
     </div>
 
     <div class="container">
-        <div class="row">
-            <div class="col-3"></div>
-            <div class="col-6">
-                <div class="titulo" id="tituloedicion">
-                    <h1>Edición digital de la sección de carpintería del manuscrito de Fray Andrés de San Miguel</h1>
+    <div class="row">
+        <div class="col-9">
+            <div class="titulo">
+                <h1>Edición digital de la sección de carpintería del manuscrito de Fray Andrés de San Miguel</h1>
+            </div>
+            <div class="centered-container">
+                <a class="boton" href="../edicion/f72r.html">Comienza a leer aquí</a>
+                <p>O selecciona un folio a continuación:</p>
+            </div>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <a href="f72r.html">
+                        <img src="../assets/images/facsimil/72r.jpg" alt="Folio 72r">
+                        <div class="title-overlay">Folio 72r</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f72v.html">
+                        <img src="../assets/images/facsimil/72v.jpg" alt="Folio 72v">
+                        <div class="title-overlay">Folio 72v</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f73r.html">
+                        <img src="../assets/images/facsimil/73r.jpg" alt="Folio 73r">
+                        <div class="title-overlay">Folio 73r</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f73v.html">
+                        <img src="../assets/images/facsimil/73v.jpg" alt="Folio 73v">
+                        <div class="title-overlay">Folio 73v</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f74r.html">
+                        <img src="../assets/images/facsimil/74r.jpg" alt="Folio 74r">
+                        <div class="title-overlay">Folio 74r</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f74v.html">
+                        <img src="../assets/images/facsimil/74v.jpg" alt="Folio 74v">
+                        <div class="title-overlay">Folio 74v</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f75r.html">
+                        <img src="../assets/images/facsimil/75r.jpg" alt="Folio 75r">
+                        <div class="title-overlay">Folio 75r</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f75v.html">
+                        <img src="../assets/images/facsimil/75v.jpg" alt="Folio 75v">
+                        <div class="title-overlay">Folio 75v</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f76r.html">
+                        <img src="../assets/images/facsimil/76r.jpg" alt="Folio 76r">
+                        <div class="title-overlay">Folio 76r</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f76v.html">
+                        <img src="../assets/images/facsimil/76v.jpg" alt="Folio 76v">
+                        <div class="title-overlay">Folio 76v</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f77r.html">
+                        <img src="../assets/images/facsimil/77r.jpg" alt="Folio 77r">
+                        <div class="title-overlay">Folio 77r</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f77v.html">
+                        <img src="../assets/images/facsimil/77v.jpg" alt="Folio 77v">
+                        <div class="title-overlay">Folio 77v</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f78r.html">
+                        <img src="../assets/images/facsimil/78r.jpg" alt="Folio 78r">
+                        <div class="title-overlay">Folio 78r</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f78v.html">
+                        <img src="../assets/images/facsimil/78v.jpg" alt="Folio 78v">
+                        <div class="title-overlay">Folio 78v</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f79r.html">
+                        <img src="../assets/images/facsimil/79r.jpg" alt="Folio 79r">
+                        <div class="title-overlay">Folio 79r</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f79v.html">
+                        <img src="../assets/images/facsimil/79v.jpg" alt="Folio 79v">
+                        <div class="title-overlay">Folio 79v</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f80r.html">
+                        <img src="../assets/images/facsimil/80r.jpg" alt="Folio 80r">
+                        <div class="title-overlay">Folio 80r</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f80v.html">
+                        <img src="../assets/images/facsimil/80v.jpg" alt="Folio 80v">
+                        <div class="title-overlay">Folio 80v</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f81r.html">
+                        <img src="../assets/images/facsimil/81r.jpg" alt="Folio 81r">
+                        <div class="title-overlay">Folio 81r</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f81v.html">
+                        <img src="../assets/images/facsimil/81v.jpg" alt="Folio 81v">
+                        <div class="title-overlay">Folio 81v</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f82r.html">
+                        <img src="../assets/images/facsimil/82r.jpg" alt="Folio 82r">
+                        <div class="title-overlay">Folio 82r</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f82v.html">
+                        <img src="../assets/images/facsimil/82v.jpg" alt="Folio 82v">
+                        <div class="title-overlay">Folio 82v</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f83r.html">
+                        <img src="../assets/images/facsimil/83r.jpg" alt="Folio 83r">
+                        <div class="title-overlay">Folio 83r</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f83v.html">
+                        <img src="../assets/images/facsimil/83v.jpg" alt="Folio 83v">
+                        <div class="title-overlay">Folio 83v</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f84r.html">
+                        <img src="../assets/images/facsimil/84r.jpg" alt="Folio 84r">
+                        <div class="title-overlay">Folio 84r</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f84v.html">
+                        <img src="../assets/images/facsimil/84v.jpg" alt="Folio 84v">
+                        <div class="title-overlay">Folio 84v</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f85r.html">
+                        <img src="../assets/images/facsimil/85r.jpg" alt="Folio 85r">
+                        <div class="title-overlay">Folio 85r</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f85v.html">
+                        <img src="../assets/images/facsimil/85v.jpg" alt="Folio 85v">
+                        <div class="title-overlay">Folio 85v</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f86r.html">
+                        <img src="../assets/images/facsimil/86r.jpg" alt="Folio 86r">
+                        <div class="title-overlay">Folio 86r</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f86v.html">
+                        <img src="../assets/images/facsimil/86v.jpg" alt="Folio 86v">
+                        <div class="title-overlay">Folio 86v</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f87r.html">
+                        <img src="../assets/images/facsimil/87r.jpg" alt="Folio 87r">
+                        <div class="title-overlay">Folio 87r</div>
+                    </a>
+                </div>
+                <div class="grid-item">
+                    <a href="f87v.html">
+                        <img src="../assets/images/facsimil/87v.jpg" alt="Folio 87v">
+                        <div class="title-overlay">Folio 87v</div>
+                    </a>
                 </div>
             </div>
-        </div>
-    
-        <div class="row">
-            <div class="col-3">
-                <div id="imagenContainer" class="imagen-fixed">
-                    <img src="../assets/images/facsimil/72r.jpg" alt="Descripción de la imagen" id="miImagen" />
-                </div> <!-- HAY QUE PROBAR A RECUPERAR LA IMAGEN DESDE EL TEI DICIENDO QUE LO INSERTE EN ESTE CONTAINER -->
-                <div id="modalImagen" class="imagen-modal" style="display: none;">
-                    <div class="modal-content-wrapper"> <!-- Contenedor agregado para centrado -->
-                        <span class="cerrar-imagen">&times;</span>
-                        <img class="imagen-modal-content" id="img01" alt="Descripción de la imagen">
-                        <div id="caption"></div>
-                    </div>
-                </div>
-                <div class="botones-fijos">
-                    <button id="showDiplomatic" class="boton">Edición diplomática</button>
-                    <button id="showModernized" class="boton">Edición modernizada</button>
-                </div>
-            </div>
-            <div class="col-6">
-                <div id="xml-tei-container">
-                    <!-- Aquí se colocará el contenido del archivo XML-TEI -->
-                </div>
-            </div>
-            <div class="col-3">
-                <a href="tu_enlace_aquí" class="logo-enlace">
-                    <img src="../assets/images/tei.png" alt="Logo TEI">
-                </a>
-            </div>
+
         </div>
     </div>
+    </div>
 
-    <script src="../assets/js/script.js"></script>
 
-    <!-- CETEIcean -->
-    <script src="../assets/js/CETEI.js"></script>
-    <script src="../assets/js/teiViewer.js"></script>
 
-    <script>
-        document.getElementById('miImagen').onclick = function () {
-            var modal = document.getElementById('modalImagen');
-            var modalImg = document.getElementById('img01');
-            var captionText = document.getElementById('caption');
-            modal.style.display = "flex";
-            modalImg.src = this.src;
-            captionText.innerHTML = this.alt;
+   
 
-            var span = document.getElementsByClassName("cerrar-imagen")[0];
+<script src="../assets/js/script.js"></script>
 
-            span.onclick = function () {
-                modal.style.display = "none";
-            }
 
-            // Cierra el modal si el usuario hace clic fuera de la imagen
-            window.onclick = function (event) {
-                if (event.target === modal) {
-                    modal.style.display = "none";
-                }
-            }
-        }
-    </script>
-    
 </body>
 </html>
