--- a/index.html
+++ b/index.html
@@ -25,18 +25,23 @@
         <div class="cita">
             <p>Mamani Fuentes, Francisco (2024). Edición digital de la sección de carpintería del manuscrito de Fray Andrés de San Miguel, siglo XVII.</p>
         </div>
+        <div class="logos">
+            <a href="https://github.com/fmamanif/Fray-Andres-de-San-Miguel" target="_blank"><img src="/assets/images/github.png" alt="GitHub"></a>
+            <a href="#" target="_blank"><img src="/assets/images/zenodo.png" alt="Zenodo"></a> 
+        </div>
     </div>
     
     <!-- PORTADA-->
-<div class="container">    
+<div class="container inicio">    
     <div class="row" id="portada">
-        <div class="col-9">
+        <div class="col-9" id="contenido">
             <div class="centrado-vertical">
                 <div id="titulo-web">
                     <h2>Edición digital</h2>
                     <h1>La carpintería en Fray Andrés de San Miguel</h1>
                 </div>
                 <div><a class="boton" href="../edicion">Accede a la edición</a></div>
+                <div class="background-image"></div>
             </div>
             <div id="creditos">
                 <p>Bajo la dirección de <a class="enlace" href="http://fmamanif.com/" target="_blank">Francisco Mamamani Fuentes</a></p> 
@@ -44,6 +49,7 @@
                     <a class="enlace" href="https://www.albanecar.es/" target="_blank">Albanécar</i></a> 
                     y <a class="enlace" href="https://www.xn--carpinteriamudejardelamoraa-fvc.com/" target="_blank">Ángel María Martín</i></a>
                 </p>
+                <p>Con el apoyo de Benson Library</p>
             </div>
         </div>
     </div>  
