--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="../">Inicio</a>
         <a href="../proyecto">Sobre el proyecto</a>
         <a href="../edicion">Edición</a>
+        <a href="../edicion/textocompleto.html">Texto completo</a>
         <a href="../estudio">Estudio</a>
         <div class="cita">
             <p>Mamani Fuentes, Francisco (2024). Edición digital de la sección de carpintería del manuscrito de Fray Andrés de San Miguel, siglo XVII.</p>
