cambio en el botón

--- a/edicion/textocompleto.html
+++ b/edicion/textocompleto.html
@@ -53,9 +53,8 @@
                     </div>
                 </div>
                 <div class="botones-fijos">
-                    <button id="showDiplomatic" class="boton">Edición diplomática</button>
-                    <button id="showModernized" class="boton">Edición modernizada</button>
-                </div>
+                    <button id="toggleEdition" class="boton">Ver edición diplomática</button>
+                </div>                
             </div>
             <div class="col-6">
                 <div id="xml-tei-container">
