añado a leslie como colaboradora

--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
             </div>
             <div id="creditos">
                 <p>Bajo la dirección de <a class="enlace" href="http://fmamanif.com/" target="_blank">Francisco Mamamani Fuentes</a></p> 
-                <p>Con la colaboración de <a class="enlace" href="https://dxvidmr.github.io/" target="_blank">David Merino Recalde</i></a>, 
+                <p>Con la colaboración de <a class="enlace" href="https://dxvidmr.github.io/" target="_blank">David Merino Recalde</i></a>,
+                    <a class="enlace" href="#" target="_blank">Leslie Blondet</i></a>,
                     <a class="enlace" href="https://www.albanecar.es/" target="_blank">Albanécar</i></a> 
                     y <a class="enlace" href="https://www.xn--carpinteriamudejardelamoraa-fvc.com/" target="_blank">Ángel María Martín</i></a>
                 </p>
-                <p>Con el apoyo de Benson Library</p>
+                <p>Con el apoyo de una <a class="enlace" href="https://sites.utexas.edu/llilasbensonds/" target="_blank">LLILAS Benson Digital Scholarship</a>, The University of Texas at Austin</p>
             </div>
         </div>
     </div>  
