--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="background-image"></div>
             </div>
             <div id="creditos">
-                <p>Bajo la dirección de <a class="enlace" href="http://fmamanif.com/" target="_blank">Francisco Mamamani Fuentes</a></p> 
+                <p>Bajo la dirección de <a class="enlace" href="http://fmamanif.com/" target="_blank">Francisco Mamani Fuentes</a></p> 
                 <p>Con la colaboración de <a class="enlace" href="https://dxvidmr.github.io/" target="_blank">David Merino Recalde</i></a>,
                     <a class="enlace" href="#" target="_blank">Leslie Blondet</i></a>,
                     <a class="enlace" href="https://www.albanecar.es/" target="_blank">Albanécar</i></a> 
