--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="centrado-vertical">
                 <div id="titulo-web">
                     <h2>Edición digital</h2>
-                    <h1>La carpintería en Fray Andrés de San Miguel</h1>
+                    <h1>La carpintería de armar en Fray Andrés de San Miguel</h1>
                 </div>
                 <div><a class="boton" href="../edicion">Accede a la edición</a></div>
                 <div class="background-image"></div>
@@ -47,11 +47,13 @@
             <div id="creditos">
                 <p>Bajo la dirección de <a class="enlace" href="http://fmamanif.com/" target="_blank">Francisco Mamani Fuentes</a></p> 
                 <p>Con la colaboración de <a class="enlace" href="https://dxvidmr.github.io/" target="_blank">David Merino Recalde</i></a>,
-                    <a class="enlace" href="#" target="_blank">Leslie Blondet</i></a>,
-                    <a class="enlace" href="https://www.albanecar.es/" target="_blank">Albanécar</i></a> 
-                    y <a class="enlace" href="https://www.xn--carpinteriamudejardelamoraa-fvc.com/" target="_blank">Ángel María Martín</i></a>
+                    <a class="enlace" href="#" target="_blank">Leslie Blondet</i></a>
                 </p>
-                <p>Con el apoyo de una <a class="enlace" href="https://sites.utexas.edu/llilasbensonds/" target="_blank">LLILAS Benson Digital Scholarship</a>, The University of Texas at Austin</p>
+                <p>
+                    Agradecimientos a <a class="enlace" href="https://www.albanecar.es/" target="_blank">Albanécar</i></a> 
+                    y a <a class="enlace" href="https://www.xn--carpinteriamudejardelamoraa-fvc.com/" target="_blank">Ángel María Martín</i></a>
+                </p>
+                <p>Con el apoyo de <a class="enlace" href="https://sites.utexas.edu/llilasbensonds/" target="_blank">LLILAS Benson Digital Scholarship</a>, The University of Texas at Austin</p>
             </div>
         </div>
     </div>  
