--- a/edicion/f72r.html
+++ b/edicion/f72r.html
@@ -17,21 +17,17 @@
         &#9776; <!-- Símbolo de menú hamburguesa -->
     </div>
 
-    <div id="mySidebar" class="sidebar">
-        <!-- Contenido del menú -->
-        <a href="../">Inicio</a>
-        <a href="../proyecto">Sobre el proyecto</a>
-        <a href="../edicion">Edición</a>
-        <a href="../edicion/textocompleto.html">Texto completo</a>
-        <a href="../estudio">Estudio</a>
-        <div class="cita">
-            <p>Mamani Fuentes, Francisco (2024). Edición digital de la sección de carpintería del manuscrito de Fray Andrés de San Miguel, siglo XVII.</p>
-        </div>
-        <div class="logos">
-            <a href="https://github.com/fmamanif/Fray-Andres-de-San-Miguel" target="_blank"><img src="/assets/images/github.png" alt="GitHub"></a>
-            <a href="#" target="_blank"><img src="/assets/images/zenodo.png" alt="Zenodo"></a> 
-        </div>
-    </div>
+    <div id="menu-placeholder"></div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+          fetch("../includes/menu.html")
+            .then(response => response.text())
+            .then(data => {
+              document.getElementById("menu-placeholder").innerHTML = data;
+            });
+        });
+    </script>
 
     <div class="container">
         <div class="row">
@@ -56,9 +52,8 @@
                     </div>
                 </div>
                 <div class="botones-fijos">
-                    <button id="showDiplomatic" class="boton">Edición diplomática</button>
-                    <button id="showModernized" class="boton">Edición modernizada</button>
-                </div>
+                    <button id="toggleEdition" class="boton">Ver edición diplomática</button>
+                </div> 
             </div>
             <div class="col-6">
                 <div id="xml-tei-container">
@@ -68,8 +63,8 @@
             </div>
             <div class="col-3">
                 <div class="navegacion-paginas">
-                    <div id="anterior"><a href="#" class="flecha">← Página anterior</a></div>                    
-                    <div id="siguiente"><a href="#" class="flecha">Página siguiente →</a></div>                </div>
+                    <div id="anterior"><a href="#" class="flecha">← Anterior</a></div>                    
+                    <div id="siguiente"><a href="#" class="flecha">Siguiente →</a></div>
                 <div>
                     <a href="tu_enlace_aquí" class="logo-enlace">
                         <img src="../assets/images/tei.png" alt="Logo TEI">
