--- a/index.html
+++ b/index.html
@@ -10,27 +10,26 @@
     <link rel="stylesheet" href="../assets/css/fontawesome.min.css">
     <link rel="stylesheet" href="../assets/css/all.min.css">
 </head>
+
 <body>
+    
     <!--MENU-->
     <div id="menu-bar" class="menu-bar">
         &#9776; <!-- Símbolo de menú hamburguesa -->
     </div>
 
-    <div id="mySidebar" class="sidebar">
-        <!-- Contenido del menú -->
-        <a href="../">Inicio</a>
-        <a href="../proyecto">Sobre el proyecto</a>
-        <a href="../edicion">Edición</a>
-        <a href="../edicion/textocompleto.html">Texto completo</a>
-        <a href="../estudio">Estudio</a>
-        <div class="cita">
-            <p>Mamani Fuentes, Francisco (2024). Edición digital de la sección de carpintería del manuscrito de Fray Andrés de San Miguel, siglo XVII.</p>
-        </div>
-        <div class="logos">
-            <a href="https://github.com/fmamanif/Fray-Andres-de-San-Miguel" target="_blank"><img src="/assets/images/github.png" alt="GitHub"></a>
-            <a href="#" target="_blank"><img src="/assets/images/zenodo.png" alt="Zenodo"></a> 
-        </div>
-    </div>
+    <div id="menu-placeholder"></div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+          fetch("../includes/menu.html")
+            .then(response => response.text())
+            .then(data => {
+              document.getElementById("menu-placeholder").innerHTML = data;
+            });
+        });
+    </script>
+
     
     <!-- PORTADA-->
 <div class="container inicio">    
@@ -45,9 +44,9 @@
                 <div class="background-image"></div>
             </div>
             <div id="creditos">
-                <p>Bajo la dirección de <a class="enlace" href="http://fmamanif.com/" target="_blank">Francisco Mamani Fuentes</a></p> 
-                <p>Con la colaboración de <a class="enlace" href="https://dxvidmr.github.io/" target="_blank">David Merino Recalde</i></a>,
-                    <a class="enlace" href="#" target="_blank">Leslie Blondet</i></a>
+                <p>Bajo la dirección de <a class="enlace" href="http://fmamanif.com/" target="_blank">Francisco Mamani Fuentes</a>, 
+                con la colaboración de <a class="enlace" href="https://dxvidmr.github.io/" target="_blank">David Merino Recalde</i></a> y
+                <a class="enlace" href="#" target="_blank">Leslie Blondet</i></a>
                 </p>
                 <p>
                     Agradecimientos a <a class="enlace" href="https://www.albanecar.es/" target="_blank">Albanécar</i></a> 
@@ -58,6 +57,9 @@
         </div>
     </div>  
 </div>
+
+
+
 
 <script src="../assets/js/script.js"></script>
 </body>
