--- a/edicion/f72r.html
+++ b/edicion/f72r.html
@@ -51,7 +51,7 @@
                         <div id="caption"></div>
                     </div>
                 </div>
-                <div class="botones-fijos">
+                <div class="boton-version">
                     <button id="toggleEdition" class="boton">Ver edición diplomática</button>
                 </div> 
             </div>
