--- a/edicion/prueba.html
+++ b/edicion/prueba.html
@@ -48,7 +48,7 @@
                         <div id="caption"></div>
                     </div>
                 </div>
-                <div class="botones-fijos">
+                <div class="boton-version">
                     <button id="showDiplomatic" class="boton">Edición diplomática</button>
                     <button id="showModernized" class="boton">Edición modernizada</button>
                 </div>
